# shengsheng-poker

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ENGINEERING_ROADMAP.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  solver.worker.js  style.css
frontend/src/components/: Card.vue  SolverView.vue  Term.vue
frontend/src/components/train/: ActionBar.vue  FeedbackPanel.vue  HandControls.vue  PokerTable.vue  TrainerView.vue
frontend/src/domain/: decisionNode.js  index.js  legalActions.js  positions.js  reducer.js  spot.js  types.js
frontend/src/domain/__tests__/: positions.test.js  reducer.test.js
frontend/src/domain/eval/: deviationEvaluator.js  deviationEvaluator.test.js
frontend/src/domain/policy/: gtoPolicy.js  pekarstasCharts.js  postflopSolverPolicy.js  preflopChartPolicy.test.js  preflopRanges.js
frontend/src/training/: deck.js  handEvaluator.js  index.js  preflopLine.js  session.js  settlement.js
frontend/src/training/__tests__/: handEvaluator.test.js  session.test.js  settlement.test.js
frontend/src/wasm/solver/: package.json  solver.d.ts  solver.js  solver_bg.wasm  solver_bg.wasm.d.ts
postflop-solver/: Cargo.toml
postflop-solver/examples/: strategy_view.rs
solver-wasm/: Cargo.toml
solver-wasm/src/: lib.rs
