[package]
name = "postflop-solver"
version = "0.1.0"
authors = ["Wataru Inariba"]
edition = "2021"
description = "An open-source postflop solver for Texas hold'em poker"
documentation = "https://b-inary.github.io/postflop_solver/postflop_solver/"
repository = "https://github.com/b-inary/postflop-solver"
license = "AGPL-3.0-or-later"

[dependencies]
bincode = { version = "2.0.0-rc.3", optional = true }
once_cell = "1.18.0"
rayon = { version = "1.8.0", optional = true }
regex = "1.9.6"
zstd = { version = "0.12.4", optional = true, default-features = false }

[features]
default = ["bincode", "rayon"]
custom-alloc = []
rayon = ["dep:rayon", "zstd?/zstdmt"]

[lints.rust]
# 放宽 Rust 1.96 对这份 2023 老代码的新 deny lint(action_tree.rs 3 处裸指针)。
# 用 Cargo.toml [lints] 而非 RUSTFLAGS,避免污染 wasm target 探测,
# 且对 path 依赖也生效(cargo 不会 cap-lints path 依赖)。
dangerous_implicit_autorefs = "allow"
